cluster/homelab/apps/CTF/XSS-Site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xss-site
  namespace: ctf
spec:
  selector:
    matchLabels:
      app: xss-site
  template:
    metadata:
      labels:
        app: xss-site
    spec:
      containers:
        - name: xss-site
          image: registry.oplabs.us:5050/root/ctf-web-xss:latest
          pull-policy: Always
          resources:
            limits:
              memory: "1GiMi"
              cpu: "5000m"
          ports:
            - containerPort: 80
